Change Log:

**8/3/16**
- Updated for patch 2.4.2:
-- Companion/Wolf reduced from 30% to 15%
-- Marked for Death reduced from 20% to 15%
-- Calamity now uses your selected MfD rune and does not stack with other MfDs
-- Added The Demon's Demise mechanics
-- Added 2.4.2 Spike Trap Mechanics

**7/12/16**
-- Fixed Endless Walk buff to be Multiplicative

**7/11/16**
-- Added new input field to synchronize cooldowns (FoK, RoV, Companion) with CoE (default is "selected"). When selected, FoK, RoV and Companion (wolf/bat) will only activate when appropriate CoE element buff is up. Desired CoE buff is selected based on rune of FoK, RoV, Spender or Primary skill.
-- When using Lord Greenstone's Fan, FoK will only activate after maximum # of stacks (30)

**7/7/16**
-- Added support for Lord Greenstone's Fan
-- Added Fan of Knives to skill cooldown list

**6/30/16**
-- Added support for Sash of Knives

**6/19/16**
-- Fixed error with importing profile with unset legendary powers
-- Updated (and moved) cooldown list to show only skills currently selected
-- Now shows uptime for cooldown skills
-- Now properly imports Marked for Death, Vault, Spike Trap, Shadow Power

**4/29/16**
-- Augustine's Panacea now properly includes damage bonus for Frost Arrow, Nether Tentacles and Lightning Bolts runes

**4/28/16**
- Now properly adds 20% Fire Damage if Magefist is cubed on profile import

**4/27/16**
- Added support for Magefist's new legendary power (fire damage)
- Added support for Augustine's Panacea.
--- Has same effect on Ball Lightning as Meticulous Bolts
--- Increases Immolation Arrow DoT damage by 200-250% (implemented as a multiplier against the DoT base damage)
- Both items should import from profile, but untested (I need a profile with the new items equipped)

**4/26/16**
- Updated for patch 2.4.1
-- Steady Aim passive is now Multiplicative
-- Companion/Wolf is now Multiplicative
-- Bane of the Powerful damage bonus is now Multiplicative